Included a first component.
Wrote the first component using typescript. Configured webpack to inline
the html and css files, which have to be added by using the require
webpack method. To be able to use this in typescript, I had to provide a
custom defintion file.

--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,9 @@
 </style>
 </head>
 
-<body ng-controller="mainCtrl">
+<body>
     <h1>Guitar Care Center</h1>
-    {{greeting}}
+    <guitar-creator></guitar-creator>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
