--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>Guitar Care Center</h1>
-    <guitar-creator></guitar-creator>
+    <ng-view></ng-view>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
