--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html ng-app="guitarCareCenterApp">
-<head>
-<meta charset="UTF-8">
-<title>Guitar Care Center</title>
-<!-- <link href="css/angular-bootstrap.css" rel="stylesheet"> -->
-<style type="text/css">
-[ng\:cloak], [ng-cloak], .ng-cloak {
-	display: none !important;
-}
-</style>
-</head>
+    <head>
+	<meta charset="UTF-8">
+	<title>Guitar Care Center</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<style type="text/css">
+	 [ng\:cloak], [ng-cloak], .ng-cloak {
+	     display: none !important;
+	 }
+	</style>
+    </head>
 
-<body>
-    <h1>Guitar Care Center</h1>
-    <ng-view></ng-view>
-    <script src="dist/bundle.js"></script>
-</body>
+    <body>
+	<navigation></navigation>
+	<ng-view></ng-view>
+
+	<script src="dist/bundle.js"></script>
+    </body>
 </html>
