Added a dummy form for the GuitarCreation

--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,11 @@
     </head>
 
     <body>
+
 	<navigation></navigation>
-	<ng-view></ng-view>
+	<div class="container-fluid">
+	    <ng-view></ng-view>
+	</div>
 
 	<script src="dist/bundle.js"></script>
     </body>
