The navbar is now fixed on top.

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,9 @@
 	</style>
     </head>
 
-    <body>
+
+    <body style="padding-top: 20px;">
+
 	<navigation></navigation>
 	<ng-view></ng-view>
 
